--- a/samples-storage/src/main/resources/application.yml
+++ b/samples-storage/src/main/resources/application.yml
@@ -50,8 +50,6 @@ seata:
       session-timeout: 6000
       cluster: default
   config:
-    file:
-      name: file.conf
     type: zk
     zk:
       server-addr: 127.0.0.1:2181
@@ -59,5 +57,4 @@ seata:
       session-timeout: 6000
   enable-auto-data-source-proxy: true
   use-jdk-proxy: false
-
-
+  data-source-proxy-mode: AT
